[workspace]
resolver = "3"
members = ["core", "greedy-scheduler"]


[workspace.package]
version = "0.1.0"
edition = "2024"



[workspace.lints.clippy]
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
# See `clippy.toml`.
disallowed_methods = "warn"
get_first = "allow"
inline-always = "allow"
match_bool = "allow"
missing_const_for_fn = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless-raw-string-hashes = "allow"
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
todo = "warn"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "warn"


[workspace.dependencies]
agave-feature-set = { git = "https://github.com/OliverNChalk/agave", branch = "temp/greedy" }
agave-scheduler-bindings = { git = "https://github.com/OliverNChalk/agave", branch = "temp/greedy" }
agave-scheduling-utils = { git = "https://github.com/OliverNChalk/agave", branch = "temp/greedy" }
agave-transaction-view = { git = "https://github.com/OliverNChalk/agave", branch = "temp/greedy" }
axum = "0.7.9"
bincode = "1.3.3"
clap = "4.5.51"
futures = { version = "0.3.31", default-features = false }
greedy-scheduler.path = "./greedy-scheduler"
hashbrown = "0.16.0"
min-max-heap = "1.3.0"
rts-alloc = "1.0.0"
serde = "1.0"
serde_json = "1.0"
shaq = "1.0.0"
slotmap = "1.0.7"
solana-compute-budget-instruction = { git = "https://github.com/OliverNChalk/agave", branch = "temp/greedy" }
solana-compute-budget-interface = "3.0.0"
solana-cost-model = { git = "https://github.com/OliverNChalk/agave", branch = "temp/greedy" }
solana-fee = { git = "https://github.com/OliverNChalk/agave", branch = "temp/greedy" }
solana-fee-structure = "3.0.0"
solana-hash = "3.0.1"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-pubkey = "3.0.0"
solana-runtime-transaction = { git = "https://github.com/OliverNChalk/agave", branch = "temp/greedy" }
solana-svm-transaction = { git = "https://github.com/OliverNChalk/agave", branch = "temp/greedy" }
solana-system-transaction = "3.0.0"
solana-transaction = "3.0.1"
static_assertions = "1.1.0"
tokio = "1.48.0"
toolbox.git = "https://github.com/OliverNChalk/toolbox-rs"
tracing = "0.1.41"


[patch.crates-io]
rts-alloc.git = "https://github.com/anza-xyz/rts-alloc"
