[package]
name = "core"
version = "0.1.0"
edition = "2024"


[lints]
workspace = true

[dependencies]
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api"] }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true, features = ["alloc"] }
greedy-scheduler.workspace = true
hashbrown.workspace = true
http_api = { path = "../http_api" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
solana-pubkey.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "signal"] }
toolbox = { workspace = true, features = ["named_task", "shutdown", "tracing", "version"] }
tracing.workspace = true
