[package]
name = "greedy-scheduler-bench"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
greedy-scheduler = { path = "../greedy-scheduler" }
agave-feature-set = { workspace = true, features = ["agave-unstable-api"] }
agave-scheduler-bindings = { workspace = true, features = [
  "dev-context-only-utils",
] }
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api"] }
agave-transaction-view.workspace = true
hashbrown.workspace = true
solana-compute-budget-instruction = { workspace = true, features = [
  "agave-unstable-api",
] }
solana-compute-budget-interface.workspace = true
solana-fee = { workspace = true, features = ["agave-unstable-api"] }
solana-hash.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-pubkey.workspace = true
solana-runtime-transaction = { workspace = true, features = [
  "agave-unstable-api",
] }
solana-system-transaction.workspace = true
solana-transaction = { workspace = true, features = ["bincode", "serde"] }
criterion = "0.5"
rts-alloc.workspace = true
bincode.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scheduler_throughput"
harness = false
