[package]
name = "load-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.1.5"
solana-sdk = "2.1.5"
solana-rpc-client = "2.1.5"
solana-rpc-client-api = "2.1.5"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"
clap = { version = "4.5.51", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
hex = "0.4"

[[bin]]
name = "load-test"
path = "src/main.rs"
